# Lexical

./: .gitignore  LICENSE  README.md  TODO.md  devbuild.sh  pyproject.toml  test_wordnet.py
.github/workflows/: pypi-publish.yml  python-app.yml
lexical/: __init__.py  main.py  server.py
lexical/wordnet/: wordnet.py
lexy/: main.py  server.py
lexy/wordnet/: wordnet.py
tests/: test_wordnet.py  wrp.yml
